--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -3,6 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
+        <import type="java.util.List" />
+        <import type="dk.lgr.roombooking.model.Booking" />
         <variable
             name="viewModel"
             type="dk.lgr.roombooking.viewmodel.MainViewModel" />
@@ -43,7 +45,7 @@
         android:onClick="@{() -> viewModel.showToCalendar()}"
         android:text="@={viewModel.cInstances.toCalendarText}"/>
 
-    <!--<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/mainSwiperefresh"
         android:layout_width="match_parent"
         android:layout_height="520dp"
@@ -52,14 +54,17 @@
         android:layout_marginEnd="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mainInputFromDateEditText">
+        app:layout_constraintTop_toBottomOf="@+id/mainInputFromDateEditText"
+        app:onRefreshListener="@{()->viewModel.refreshRecyclerView()}"
+        app:refreshing="@{viewModel.recyclerViewIsRefreshing}">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/mainRecyclerView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:bookingsList="@{viewModel.bookingList}"/>
 
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <TextView
         android:id="@+id/textView"
