--- a/app/src/main/res/layout/booking_row.xml
+++ b/app/src/main/res/layout/booking_row.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="italic"
-        android:text="@{booking.userMail}"/>
+        android:text="@{booking.userId}"/>
 
     <TextView
         android:id="@+id/reservation_fromtime"
