--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -55,8 +55,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mainInputFromDateEditText"
-        app:onRefreshListener="@{()->viewModel.refreshRecyclerView()}"
-        app:refreshing="@{viewModel.recyclerViewIsRefreshing}">
+        app:refreshing="@{viewModel.recyclerViewIsRefreshing}"
+        app:onRefreshListener="@{()->viewModel.refreshRecyclerView()}">
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/mainRecyclerView"
